tests/positive/VisibilityPrecendence/NestedLocalModuleViaExport.juvix
module NestedLocalModuleViaExport;

module A;
  type T := t;
end;

open A using {T} public;
open A;
