tests/negative/MicroJuvix/LhsTooManyPatterns.juvix
module LhsTooManyPatterns;
  inductive T {
    A : T;
  };

  f : T → T;
  f A x ≔ A;
end;
